--- a/app/src/main/res/layout/layout1.xml
+++ b/app/src/main/res/layout/layout1.xml
@@ -29,11 +29,11 @@
                 </LinearLayout>
             </HorizontalScrollView>
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="健康资讯"
                     android:textSize="25dp"
@@ -44,6 +44,8 @@
                     android:id="@+id/s_home_thyList">
                 </ListView>
             </LinearLayout>
+
         </LinearLayout>
+
     </ScrollView>
 </LinearLayout>
