增加了定制页面 定制选项

--- a/app/src/main/res/layout/activity_y_bespoke_demo.xml
+++ b/app/src/main/res/layout/activity_y_bespoke_demo.xml
@@ -1,12 +1,257 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.neusoft.a124team.dietitian.YuJiangPeng.Y_bespoke_demo">
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="#208787"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginTop="48dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:background="#CCffff"
+            android:orientation="horizontal"
+            android:gravity="center"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/y_combo"
+                android:textColor="@color/red"
+                android:textSize="19sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="#CCffff"
+            android:layout_marginTop="0.5dip"
+          >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/y_bespoke_year"
+                android:textSize="16sp"
+                android:layout_marginStart="12dp"
+                android:id="@+id/y_year"
+                android:layout_centerVertical="true"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/y_bespoke_money"
+                android:textSize="16sp"
+                android:textColor="@color/red"
+                android:layout_marginStart="18dp"
+                android:layout_toEndOf="@id/y_year"
+                android:layout_centerVertical="true"
+                android:id="@+id/y_money"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/y_bespoke_year_money"
+                android:textColor="@color/red"
+                android:textSize="17sp"
+                android:layout_marginStart="6dp"
+                android:layout_toEndOf="@id/y_money"
+                android:layout_centerVertical="true"
+                android:id="@+id/y_year_money"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="6dp"
+                android:text="@string/y_bespoke_year_time"
+                android:layout_toEndOf="@id/y_year_money"
+                android:textColor="@color/red"
+                android:textSize="14sp"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="58dp"
+                android:button="@null"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="18dp"
+                android:drawableEnd="@drawable/y_img_true1"
+                android:id="@+id/y_radido1"/>
 
-</RelativeLayout>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="#CCffff"
+            android:layout_marginTop="0.5dip">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="12dp"
+                android:textSize="16sp"
+                android:text="@string/y_bespoke_half_year"
+                android:id="@+id/y_half"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/y_bespoke_money"
+                android:textSize="16sp"
+                android:textColor="@color/red"
+                android:layout_toEndOf="@id/y_half"
+                android:layout_marginStart="18dp"
+                android:layout_centerVertical="true"
+                android:id="@+id/y_money2"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/y_bespoke_half_year_money"
+                android:textSize="17sp"
+                android:layout_centerVertical="true"
+                android:textColor="@color/red"
+                android:layout_toEndOf="@+id/y_money2"
+                android:layout_marginStart="6dp"
+                android:id="@+id/y_half_money"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/y_bespoke_half_year_time"
+                android:textColor="@color/red"
+                android:layout_marginStart="6dp"
+                android:textSize="14sp"
+                android:layout_toEndOf="@+id/y_half_money"
+                android:id="@+id/y_half_time"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@null"
+                android:layout_centerVertical="true"
+                android:drawableEnd="@drawable/y_img_true1"
+                android:layout_toEndOf="@+id/y_half_time"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="18dp"
+                android:id="@+id/y_radido2"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="#CCffff"
+            android:layout_marginTop="0.5dip">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="12dp"
+                android:textSize="16sp"
+                android:text="@string/y_bespoke_quarter"
+                android:id="@+id/y_quarter"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/y_bespoke_money"
+                android:textSize="16sp"
+                android:textColor="@color/red"
+                android:layout_toEndOf="@id/y_quarter"
+                android:layout_marginStart="18dp"
+                android:layout_centerVertical="true"
+                android:id="@+id/y_money3"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/y_bespoke_quarter_money"
+                android:textSize="17sp"
+                android:layout_centerVertical="true"
+                android:textColor="@color/red"
+                android:layout_toEndOf="@+id/y_money3"
+                android:layout_marginStart="6dp"
+                android:id="@+id/y_quarter_money"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/y_bespoke_quarter_time"
+                android:textColor="@color/red"
+                android:layout_marginStart="6dp"
+                android:textSize="14sp"
+                android:layout_toEndOf="@+id/y_quarter_money"
+                android:id="@+id/y_quarter_time"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@null"
+                android:layout_centerVertical="true"
+                android:drawableEnd="@drawable/y_img_true1"
+                android:layout_toEndOf="@+id/y_quarter_time"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="18dp"
+                android:id="@+id/y_radido3"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="#CCffff"
+            android:layout_marginTop="0.5dip">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="12dp"
+                android:textSize="16sp"
+                android:text="@string/y_bespoke_month"
+                android:id="@+id/y_month"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/y_bespoke_money"
+                android:textSize="16sp"
+                android:textColor="@color/red"
+                android:layout_toEndOf="@id/y_month"
+                android:layout_marginStart="18dp"
+                android:layout_centerVertical="true"
+                android:id="@+id/y_money4"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/y_bespoke_month_money"
+                android:textSize="17sp"
+                android:layout_centerVertical="true"
+                android:textColor="@color/red"
+                android:layout_toEndOf="@+id/y_money4"
+                android:layout_marginStart="6dp"
+                android:id="@+id/y_month_money"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/y_bespoke_month_time"
+                android:textColor="@color/red"
+                android:layout_marginStart="6dp"
+                android:textSize="14sp"
+                android:layout_toEndOf="@+id/y_month_money"
+                android:id="@+id/y_month_time"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@null"
+                android:layout_centerVertical="true"
+                android:drawableEnd="@drawable/y_img_true1"
+                android:layout_toEndOf="@+id/y_month_time"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="18dp"
+                android:id="@+id/y_radido4"/>
+        </RelativeLayout>
+
+    </LinearLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/y_bespoke_immediately_button"
+        android:text="@string/y_bespoke_immediately"/>
+
+</LinearLayout>
