--- a/app/src/main/res/layout/activity_s_login_ui.xml
+++ b/app/src/main/res/layout/activity_s_login_ui.xml
@@ -51,7 +51,12 @@
             android:layout_marginLeft="200dp"
             />
     </LinearLayout>
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/s_register"
+    android:id="@+id/s_login_registerTxt"
+    android:layout_gravity="bottom"/>
 
 </LinearLayout>
 
