--- a/app/src/main/res/layout/activity_s_register.xml
+++ b/app/src/main/res/layout/activity_s_register.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.neusoft.a124team.dietitian.wangRui.baseAdapter.S_register">
+    android:orientation="vertical"
 
-</RelativeLayout>
+    tools:context=".wangRui.S_register">
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/s_login_btnshape"
+        android:text="@string/s_speed_register"
+        android:layout_gravity="center_horizontal"/>
+</LinearLayout>
