--- a/app/src/main/res/layout/activity_s_login_ui.xml
+++ b/app/src/main/res/layout/activity_s_login_ui.xml
@@ -24,32 +24,64 @@
 
 
     <Button
-        android:layout_width="300dp"
+        android:layout_marginTop="30dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        style="@style/button_style_with_select"
         android:text="@string/s_login"
+        android:background="@drawable/s_login_btnshape"
         android:layout_gravity="center"
         android:id="@+id/s_login_btn"
         />
     <LinearLayout
+        android:layout_margin="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/s_find"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="20dp"
 
-            />
-        <TextView
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center_horizontal">
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/s_login_baidu"
+
+        />
+
+    </LinearLayout>
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/s_speed"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="200dp"
-            />
+            android:layout_weight="1"
+            android:gravity="center_horizontal">
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/s_login_qq"
+                android:layout_gravity="center_horizontal"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal">
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/s_login_sina"
+
+                />
+        </LinearLayout>
     </LinearLayout>
 <TextView
     android:layout_width="wrap_content"
