--- a/app/src/main/res/layout/s_news_listitem.xml
+++ b/app/src/main/res/layout/s_news_listitem.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
+
     <ImageView
+        android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/s_home_newsImg" />
@@ -14,12 +16,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
         android:id="@+id/s_home_newsTitle" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
+
             android:id="@+id/s_home_newsContent" />
 
     </LinearLayout>
