--- a/app/src/main/res/layout/layout4.xml
+++ b/app/src/main/res/layout/layout4.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
             android:id="@+id/hSpinnerSelect3"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-         />
+            />
         <ImageButton
             android:layout_width="30dp"
             android:layout_height="30dp"
@@ -50,10 +50,11 @@
 
         <ImageButton
             android:id="@+id/hImageButtonOnclick1"
-            android:layout_width="165dp"
+            android:layout_width="170dp"
             android:layout_height="80dp"
             android:layout_column="0"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="10dp"
             android:layout_row="0"
             android:src="@drawable/h_imagebutton_select1"/>
 
@@ -68,7 +69,7 @@
 
         <ImageButton
             android:id="@+id/hImageButtonOnclick2"
-            android:layout_width="165dp"
+            android:layout_width="170dp"
             android:layout_height="80dp"
             android:layout_column="1"
             android:layout_row="0"
@@ -85,10 +86,11 @@
 
         <ImageButton
             android:id="@+id/hImageButtonOnclick3"
-            android:layout_width="165dp"
+            android:layout_width="170dp"
             android:layout_height="80dp"
             android:layout_column="0"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="10dp"
             android:layout_row="2"
             android:src="@drawable/h_imagebutton_select3"/>
 
@@ -103,7 +105,7 @@
 
         <ImageButton
             android:id="@+id/hImageButtonOnclick4"
-            android:layout_width="165dp"
+            android:layout_width="170dp"
             android:layout_height="80dp"
             android:layout_column="1"
             android:layout_row="2"
@@ -134,10 +136,11 @@
 
         <ImageButton
             android:id="@+id/hImageButtonOnclick5"
-            android:layout_width="165dp"
+            android:layout_width="170dp"
             android:layout_height="60dp"
             android:layout_column="0"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="10dp"
             android:layout_row="0"
             android:src="@drawable/h_imagebutton_select5"/>
 
@@ -152,7 +155,7 @@
 
         <ImageButton
             android:id="@+id/hImageButtonOnclick6"
-            android:layout_width="165dp"
+            android:layout_width="170dp"
             android:layout_height="60dp"
             android:layout_column="1"
             android:layout_row="0"
@@ -169,10 +172,11 @@
 
         <ImageButton
             android:id="@+id/hImageButtonOnclick7"
-            android:layout_width="165dp"
+            android:layout_width="170dp"
             android:layout_height="60dp"
             android:layout_column="0"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="10dp"
             android:layout_row="2"
             android:src="@drawable/h_imagebutton_select7"/>
 
@@ -187,7 +191,7 @@
 
         <ImageButton
             android:id="@+id/hImageButtonOnclick8"
-            android:layout_width="165dp"
+            android:layout_width="170dp"
             android:layout_height="60dp"
             android:layout_column="1"
             android:layout_row="2"
