--- a/app/src/main/res/layout/layout3.xml
+++ b/app/src/main/res/layout/layout3.xml
@@ -7,7 +7,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -192,7 +193,7 @@
 
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/w_fragment_listView">
 
             </ListView>
