--- a/app/src/main/res/drawable/s_login_btnshape.xml
+++ b/app/src/main/res/drawable/s_login_btnshape.xml
@@ -4,8 +4,8 @@
     <corners android:radius="8dp">
     </corners>
     <gradient
-        android:startColor="@color/textcolor_checked"
-        android:endColor="@color/textcolor_checked"
+        android:startColor="@color/s_textColor_checked"
+        android:endColor="@color/s_textColor_checked"
         android:angle="45">
 
     </gradient>
