--- a/app/src/main/res/drawable/tab_textcolor.xml
+++ b/app/src/main/res/drawable/tab_textcolor.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="false"
-          android:color="@color/textcolor"/>
+          android:color="@color/s_textColor"/>
 
     <item android:state_checked="true"
-        android:color="@color/textcolor_checked"/>
+        android:color="@color/s_textColor_checked"/>
 
 </selector>
