--- a/app/src/main/res/layout/activity_s_register.xml
+++ b/app/src/main/res/layout/activity_s_register.xml
@@ -12,5 +12,23 @@
         android:layout_height="wrap_content"
         android:background="@drawable/s_login_btnshape"
         android:text="@string/s_speed_register"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        android:layout_margin="50dp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/s_login_btnshape"
+        android:text="@string/s_speed_register"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        android:layout_margin="50dp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/s_login_btnshape"
+        android:text="@string/s_speed_register"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        android:layout_margin="50dp"/>
 </LinearLayout>
