--- a/app/src/main/res/layout/s_news_listitem.xml
+++ b/app/src/main/res/layout/s_news_listitem.xml
@@ -9,21 +9,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/s_home_newsImg" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/s_home_newsTitle" />
-        <TextView
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:id="@+id/s_home_newsContent" />
-
-    </LinearLayout>
-
-
+            android:orientation="vertical">
+            <TextView
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="aaa"
+                android:id="@+id/s_home_newsContent"
+                android:layout_weight="1"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="aaaa"
+                android:layout_marginLeft="10dp"
+                android:id="@+id/s_home_newsTime"
+                />
+        </LinearLayout>
 </LinearLayout>
+
+
+
