--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="s_textColor_checked">#1C86EE</color>
     <color name="s_textColor">#BEBEBE</color>
     <color name="s_login_cursor">#C2797676</color>
+    <color name="s_login_btn">#1FBAF3</color>
 </resources>
