完成社区首页设计

--- a/app/src/main/res/layout/layout3.xml
+++ b/app/src/main/res/layout/layout3.xml
@@ -193,8 +193,10 @@
 
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/w_fragment_listView">
+                android:layout_height="600dp"
+                android:id="@+id/w_fragment_listView"
+                android:divider="@null"
+                >
 
             </ListView>
 
